Actualizando archivos para el portafolio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,14 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@cv": [
+        "./cv.json"
+      ],
+      "@/*":[
+        "./src/*"
+      ]      
+    }
+  },
   "extends": "astro/tsconfigs/strict"
 }
