--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.10",
     "@astrojs/check": "^0.5.8",
+    "astro": "^4.5.10",
+    "hotkeypad": "^0.1.1",
     "typescript": "^5.2.2"
   }
 }
